# LHC-aging-analysis

./: .gitignore  README.md  daq-monitor.desktop
data/: fta.csv  ftc.csv
data/laserROOT/: dpl-config.json  ft0_hv_corrections.json  laser_paths.lst  laser_runs.json  period_cache_2022.json  period_cache_2023.json  period_cache_2024.json  period_cache_2025.json  period_list_2022.json  period_list_2023.json  period_list_2024.json  runs.json
data/laserROOT/.cache/: period_list_2025.json
data/physicsROOT/: period_cache_2025.json  period_list_2025.json  physics_paths.lst  physics_runs.json
data_fetching/: bookkeeping.py  ctf_to_digits_converter.py  daq_monitor.py  daq_sdk.py  data_fetch.py  deduplicate_paths.py  fetch.sh  get_dates.py  get_hv_dates.py  get_paths.py  laser_fetch_download.py  monitor_client.py
notebooks/: analysis.ipynb  optimized_processing.py  oxygen.ipynb  real_benchmark_results.json
notebooks/data_processing_ext/: Cargo.toml  pyproject.toml
notebooks/data_processing_ext/src/: lib.rs
